# smol-exchange

./: .gitignore  README.md  docker-compose.yml  exchange.code-workspace  reset_redis.sh
.github/workflows/: rust.yml
apps/api/: Cargo.toml
apps/matching-engine/: Cargo.toml
apps/matching-engine/src/: lib.rs  main.rs
apps/matching-engine/src/engine/: engine.rs  orderbook.rs
apps/matching-engine/src/errors/: errors.rs  mod.rs
apps/matching-engine/src/helpers/: helpers.rs
apps/matching-engine/src/orderbook/: orderbook.rs
apps/matching-engine/tests/: unit_tests.rs
redis/: entrypoint.sh  redis-stack.conf
redis/data/: dump.rdb
