[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
prettytable = "0.10.0"
rand = "0.8.5"
redis = { version = "0.23.1", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
tabular = "0.2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
