[package]
name = "smolexchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
futures-util = "0.3.28"
prettytable = "0.10.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
redis = { version = "0.23.1", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
tabular = "0.2.0"
tokio = { version = "1.32.0", features = ["macros"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
